# datadog-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: trace_dogstatsd.hpp
src/: trace_dogstatsd.cpp
